--- a/index.html
+++ b/index.html
@@ -607,6 +607,20 @@
           </a>
         </article>
 
+        <article class="card tone-ochre">
+          <a href="021.html">
+            <div class="kicker">
+              <span class="badge">Expediente #021</span>
+              <span class="tag">Doctrinas</span>
+            </div>
+            <h3>El TULIP, refutación (Hoja por hoja)</h3>
+            <p>
+              Dossier de cinco puntos. Se presenta cada doctrina con su mejor argumento.
+            </p>
+            <div class="cta">→ <span>Abrir expediente</span></div>
+          </a>
+        </article>
+
       </div>
 
       <footer>
