--- a/index.html
+++ b/index.html
@@ -310,12 +310,6 @@
         </div>
       </div>
 
-      <div class="meta" role="list" aria-label="Metadatos del archivo">
-        <div class="pill" role="listitem">BIBLIOTECA</div>
-        <div class="pill" role="listitem">DOSSIER: JUAN CALVINO</div>
-        <div class="pill" role="listitem">LINKS</div>
-      </div>
-
       <div class="divider"></div>
       <h2 class="section-title">Índice general</h2>
     </header>
@@ -324,6 +318,20 @@
       <div class="grid">
 
         <!-- Núcleo de la doble predestinación -->
+<article class="card tone-blue">
+          <a href="calvino.html">
+            <div class="kicker">
+              <span class="badge">Dossier</span>
+              <span class="tag">Biografía</span>
+            </div>
+            <h3>Dossier: Juan Calvino</h3>
+            <p>
+              Perfil biográfico, controversias, entorno político-religioso, y rutas de lectura pública.
+            </p>
+            <div class="cta">→ <span>Abrir expediente</span></div>
+          </a>
+        </article>
+
         <article class="card tone-green">
           <a href="001.html">
             <div class="kicker">
