--- a/023.html
+++ b/023.html
@@ -452,8 +452,7 @@ Leer a Calvino, en cambio, es abrir el expediente y descubrir que la etiqueta vi
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo agregar una tabla de “Cita / Tema / Implicación” y un cuadro con términos claves
-        (decreto, elección, reprobación, consejo secreto) para lectura rápida.
+        Nota de edición. En próximas actualizaciones se agregará un cuadro con términos claves (decreto, elección, reprobación, consejo secreto) para lectura rápida.
       </div>
 
     </main>
