--- a/001.html
+++ b/001.html
@@ -520,11 +520,11 @@
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, en la próxima iteración convierto este contenido en un formato todavía más “expediente”
-        con secciones tipo Hechos, Evidencias, Objeciones, Veredicto, sin perder rigor ni tono.
+        Nota de edición. N/A
       </div>
 
     </main>
   </div>
 </body>
 </html>
+
