--- a/002.html
+++ b/002.html
@@ -419,7 +419,7 @@ Eso es más que benevolencia administrativa.
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
