--- a/003.html
+++ b/003.html
@@ -412,7 +412,7 @@ La Biblia parece resistir esa simetría. Su Dios gobierna, sí, pero también od
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
