--- a/004.html
+++ b/004.html
@@ -412,7 +412,7 @@ La Escritura predica como si el regalo estuviera realmente sobre la mesa.
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. SNota de edición. N/A.
       </div>
 
     </main>
