Update footer note to 'N/A'

--- a/005.html
+++ b/005.html
@@ -410,7 +410,7 @@ La Biblia habla como si el llamado de Dios no fuera una ilusión útil.
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
