Update footer note to N/A

--- a/006.html
+++ b/006.html
@@ -409,7 +409,7 @@ Si es una gracia que habilita de verdad a todos, el evangelio conserva su tono d
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
