Update footer note to 'N/A'

--- a/007.html
+++ b/007.html
@@ -410,7 +410,7 @@ Una teología del amor divino gana fuerza cuando deja que todos signifique todos
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
