Update footer editing note to N/A

--- a/008.html
+++ b/008.html
@@ -407,7 +407,7 @@ Cualquier sistema que necesite redefinir ese lenguaje debería caminar con cuida
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
