Update footer note to 'N/A'

--- a/009.html
+++ b/009.html
@@ -409,7 +409,7 @@ Un sistema que conserve ambas voces sin silenciar una para salvar la otra parece
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
