Update footer note to N/A

--- a/010.html
+++ b/010.html
@@ -411,7 +411,7 @@ Leerlo dentro de 9 a 11 permite una interpretación más orgánica con la misió
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
