Update footer note to 'N/A'

--- a/011.html
+++ b/011.html
@@ -408,7 +408,7 @@ Cuestiona el andamiaje conceptual que hace difícil sostener que la oferta sea g
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
