Update footer note to 'N/A'

--- a/012.html
+++ b/012.html
@@ -407,7 +407,7 @@ Una teología que permita decir Cristo murió por ti y Dios quiere tu salvación
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
