--- a/013.html
+++ b/013.html
@@ -410,7 +410,7 @@ Una teología más simple que preserve deseo divino genuino y resistencia humana
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
