Update footer editing note to N/A

--- a/014.html
+++ b/014.html
@@ -407,7 +407,7 @@ Una soteriología de gracia y libertad robusta suele sostener mejor el paisaje m
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
