--- a/015.html
+++ b/015.html
@@ -409,7 +409,7 @@ Una teología donde el llamado universal es real tiende a sostener mejor el impu
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
