--- a/016.html
+++ b/016.html
@@ -411,7 +411,7 @@ Eso debería orientar una soteriología que no ahogue ninguna de las dos voces.
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
