--- a/017.html
+++ b/017.html
@@ -402,7 +402,7 @@ El debate serio exige reconocerlo.
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
