Update references section with editorial note
Added editorial note to suggested references section.

--- a/018.html
+++ b/018.html
@@ -387,7 +387,7 @@ Su dificultad es que, al suavizar un borde, expone la tensión estructural entre
 La moderación puede ser un puente. También puede ser una señal de que el edificio requiere rediseño.
 </p>
 
-<h2>Referencias sugeridas</h2><ul><li><strong>R. C. Sproul</strong> para una exposición calvinista responsable</li>
+<h2>Referencias sugeridas</h2><ul><li><strong>R. C. Sproul</strong> para una exposición calvinista responsable</li>Nota de edición. N/A.
 <li><strong>John Piper</strong> para la lectura fuerte de soberanía y gloria</li>
 <li><strong>Roger E. Olson</strong> <em>Against Calvinism</em> como crítica sistemática</li>
 <li><strong>Ben Witherington III</strong> por lecturas contextuales de Pablo</li>
