Update footer note to 'N/A'

--- a/019.html
+++ b/019.html
@@ -399,7 +399,7 @@ Si la Escritura resiste el determinismo rígido, no será la historia la que lo 
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
