--- a/020.html
+++ b/020.html
@@ -416,7 +416,7 @@ Se la honra revisando sus supuestos.
       </section>
 
       <div class="footer">
-        Nota de edición. Si querés, puedo adaptar cada expediente al formato Hechos, Evidencias, Objeciones y Veredicto sin perder el tono.
+        Nota de edición. N/A.
       </div>
 
     </main>
